# QECommon

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.py
conan/: conanfile.py
conan/test_package/: CMakeLists.txt  conanfile.py  main.cpp
src/: CMakeLists.txt  QEContainerWrapper.hpp  QEGadget.cpp  QEGadget.hpp  QEGlobal.hpp  QES11n.cpp  QES11n.hpp
src/qe/common/: CACertificatesRepository.cpp  CACertificatesRepository.hpp  CMakeLists.txt  Common.cpp  Common.hpp  DBConnectionLockGuard.cpp  DBConnectionLockGuard.hpp  DBConnectionPool.cpp  DBConnectionPool.hpp  Exception.cpp  Exception.hpp  Future.cpp  Future.hpp  FutureBase.cpp  FutureBase.hpp  FutureData.cpp  FutureData.hpp  Gadget.cpp  Gadget.hpp  Global.hpp  Optional.hpp  Serialization.hpp
src/qe/common/serialization/: QByteArray.cpp  QByteArray.hpp  QExplicitlySharedDataPointer.hpp  QMap.hpp  QMetaEnum.cpp  QMetaEnum.hpp  QMetaObject.cpp  QMetaObject.hpp  QString.cpp  QString.hpp  QVariant.cpp  QVariant.hpp  QVector.hpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
tools/cmake/: common.cmake
